# wt

./: .gitignore  Cargo.toml  README.md  example-tasks.yaml  install.sh
.github/workflows/: release.yml  test.yml
commands/: do.md  do.toml
docs/: demo.tape
python/: example-tasks.yaml  main.py  pyproject.toml
python/src/wt/: agent_spawner.py  cleanup.py  cli.py  merge_coordinator.py  task_parser.py  ui.py  worktree_manager.py
python/tests/: test_agent_spawner.py  test_cleanup.py  test_merge_coordinator.py  test_task_parser.py  test_ui.py  test_worktree_manager.py
src/: agent_spawner.rs  cleanup.rs  config.rs  lib.rs  main.rs  merge_coordinator.rs  run.rs  session.rs  session_cmd.rs  shell.rs  task_parser.rs  tmux_manager.rs  ui.rs  worktree_manager.rs
tests/: tmux_test.rs  which_test.rs
