[package]
name = "wt"
version = "0.1.0"
edition = "2021"
authors = ["TreeBot5000"]
description = "Git worktree orchestrator for parallel agent sessions"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"
