[package]
name = "wt"
version = "0.1.0"
edition = "2021"
authors = ["TreeBot5000"]
description = "Git worktree orchestrator for parallel agent sessions"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
pathdiff = "0.2.3"
dialoguer = "0.12.0"

[dev-dependencies]
tempfile = "3.8"
