[package]
name = "wt"
version = "0.1.0"
edition = "2021"
authors = ["pld"]
description = "Git worktree orchestrator for parallel agent sessions"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
pathdiff = "0.2.3"
dialoguer = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
